// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpensesSummary should render multiple expenses correctly 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    $231.45
  </h1>
</div>
`;

exports[`ExpensesSummary should render one expense correctly 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $1.00
  </h1>
</div>
`;
